test/error/ExprList.fu
public static class Test
{
	public static bool Run()
	{
		int i = List<int>(); //ERROR: Invalid expression
	}
}
